--- a/maruko/api.plist
+++ b/maruko/api.plist
@@ -3,7 +3,10 @@
 <plist version="1.0">
 <dict>
 	<key>MODEL_MAP</key>
-	<string></string>
+	<dict>
+		<key>star/news</key>
+		<string>FDFeed</string>
+	</dict>
 	<key>API_VERSION</key>
 	<string>v1</string>
 	<key>RELEASE_HOST</key>
